# napari-hydra

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
hydra-stardist-napari/: pyproject.toml  setup.cfg
hydra-stardist-napari/hydra_stardist_napari/: napari.yaml  napari_hydra_plugin.py
hydra-stardist-napari/hydra_stardist_napari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
napari-hydra/: pyproject.toml  setup.cfg
napari-hydra/hydra_stardist_napari/: __init__.py  napari.yaml
napari-hydra/hydrastardist/: blocks_hydra.py
napari-hydra/hydrastardist/models/: base_hydra.py  model2d_hydra.py
napari-hydra/napari_hydra/: napari.yaml  napari_hydra_plugin.py
src/napari_hydra/: plugin.py
src/napari_hydra/hydrastardist/models/: metrics.py
src/napari_hydra/utils/: __init__.py  ensure_default_model.py  export.py  fine_tune.py  is_image_stack.py  layer.py  make_divisible.py  process_frame.py  rasterize_labels.py  well_processing.py
tests/: test_ensure_default_model.py  test_package_manifest.py  test_plugin_init.py  test_process_frame.py
