[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-hydra"
version = "0.0.4"
authors = [
  { name="H. Romão, T. De, A. Yakimovich", email="a.yakimovich@hzdr.de" },
]
description = "Napari Hydra Plugin - GUI-based nested object detection"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Framework :: napari',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "napari[all]",
    "csbdeep>=0.7.4",
    "scikit-image",
    "numba",
  "imageio",
  "stardist>=0.9.1",
  # TensorFlow is required at runtime by the package (tensorflow.keras is used
  # extensively). Add a conservative >=2.6 bound because the code expects
  # features available in TF 2.6+ (see hydrastardist/utils/tf.py).
  # We also require the standalone `keras` package for TF >= 2.6.
  "tensorflow>=2.6",
  "typing_extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/plaque2/napari-hydra"
Issues = "https://github.com/plaque2/napari-hydra/issues"

[project.optional-dependencies]
tf1 = [
    "csbdeep[tf1]>=0.7.4",
]
test = [
    "pytest>=7.2.0",
]
bioimageio = [
    "bioimageio.core>=0.5.0",
    "importlib-metadata",
]

[project.entry-points."napari.manifest"]
napari-hydra = "napari_hydra:napari.yaml"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
stardist = [
    "kernels/*.cl",
    "data/images/*",
]