[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-stardist-napari"
version = "0.0.1"
authors = [
  { name="Henrique Romão", email="henriquepromao@outlook.com" },
  { name="Artur Yakimovich", email="ayakimovich@ails.institute" },
]
description = "A Simple Graphical Interface for Automatic Clonal Cell Counting"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Framework :: napari',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "napari[all]",
    "csbdeep>=0.7.4",
    "scikit-image",
    "numba",
    "imageio",
    "stardist>=0.9.1"
]

[project.urls]
Homepage = "https://github.com/casus/HydraStarDist"
Issues = "https://github.com/casus/HydraStarDist/issues"