[metadata]
name = hydra-stardist-napari
version = 0.0.1
description = Hydra StarDist - A Simple Graphical Interface for Automatic Clonal Cell Counting.
long_description = file: README.md
long_description_content_type = text/markdown
author = Henrique Romão, Artur Yakimovich, Trina De
author_email = henriquepromao@outlook.com, ayakimovich@ails.institute
url = https://github.com/casus/HydraStarDist
license = BSD-3-Clause
classifiers =
    Framework :: napari
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
    napari[all]
    csbdeep>=0.7.4
    scikit-image
    numba
    imageio
    stardist>=0.9.1

[options.entry_points]
napari.manifest = 
    napari-deep-plaque = hydra_stardist_napari:napari.yaml

[options.extras_require]
tf1 =
    csbdeep[tf1]>=0.7.4
test =
    pytest; python_version<'3.7'
    pytest>=7.2.0; python_version>='3.7'
bioimageio =
    bioimageio.core>=0.5.0
    importlib-metadata

[options.package_data]
stardist = 
    kernels/*.cl
    data/images/*
    