[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-hydra"
version = "0.0.1"
authors = [
  { name="Henrique Romão", email="henriquepromao@outlook.com" },
  { name="Artur Yakimovich", email="a.yakimovich@hzdr.de" },
]
description = "Napari Hydra Plugin - GUI-based nested object detection"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Framework :: napari',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "napari[all]",
    "csbdeep>=0.7.4",
    "scikit-image",
    "numba",
  "imageio",
  "stardist>=0.9.1",
  # TensorFlow is required at runtime by the package (tensorflow.keras is used
  # extensively). Add a conservative >=2.6 bound because the code expects
  # features available in TF 2.6+ (see hydrastardist/utils/tf.py).
  # We also require the standalone `keras` package for TF >= 2.6.
  "tensorflow>=2.6",
  "typing_extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/casus/HydraStarDist"
Issues = "https://github.com/casus/HydraStarDist/issues"

[project.entry-points."napari.manifest"]
napari-hydra = "hydra_stardist_napari:napari.yaml"